--- a/src/commons/components/textarea/styles.module.css
+++ b/src/commons/components/textarea/styles.module.css
@@ -25,6 +25,7 @@
   .textarea {
     width: 100%;
     min-height: 144px;
+    height: 100%;
     padding: 16px;
     border-radius: 8px;
     border: 1px solid var(--color-gray-200);
