--- a/src/components/auth-login/styles.module.css
+++ b/src/components/auth-login/styles.module.css
@@ -102,9 +102,17 @@
 /* 버튼 영역 */
 .buttonArea {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   gap: 12px;
+}
+
+.signupButtonText {
+  display: flex;
+  width: 288px;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Button 스타일은 공통 컴포넌트에서 처리 */
