--- a/src/commons/components/input/styles.module.css
+++ b/src/commons/components/input/styles.module.css
@@ -141,6 +141,12 @@
   color: var(--color-gray-800);
 }
 
+.variant-primary.theme-light:disabled {
+  background-color: var(--color-gray-50);
+  color: var(--color-gray-400);
+  border: none;
+}
+
 .variant-primary.theme-light:hover:not(.disabled):not(.error) {
   border-color: var(--color-gray-300);
 }
@@ -295,7 +301,6 @@
 
 .input.disabled {
   background-color: var(--color-gray-100);
-  border-color: var(--color-gray-200);
   color: var(--color-gray-500);
   cursor: not-allowed;
 }
